--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^9.0.0",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
